--- a/porcfest.html
+++ b/porcfest.html
@@ -21,7 +21,7 @@
         <div class="search-icon"> <i class="fas fa-search fa-2x"></i> </div>
     </div>
     <div class="main-header2">
-        <h1 class="main-header-title"></h1>
+        <h1 class="main-header-title">PorcFest!</h1>
     </div>
     <h2>PorcFest is the longest running gathering of freedom loving people in the world!</h2>
     <div class="box">
