--- a/index.html
+++ b/index.html
@@ -36,11 +36,10 @@
         <!-- End of class .card -->
         <div class="card"> <img src="imgs/mountain.jpg" alt="Mountain">
             <h3>What to bring</h3>
-            <p> No matter anyone's political views it is important to be kind </p>
+            <p> No matter anyone's political views it is important to be kind.Strongly advised to have the following: </p>
             <ol>
                 <li>Open mind</li>
                 <li>Positive attitude</li>
-                <li>Hard work ethic</li>
             </ol>
         </div>
         <!-- End of class .card -->
