--- a/lounges.html
+++ b/lounges.html
@@ -24,7 +24,7 @@
         <div class="main-header-intro"> </div>
     </div>
     <div class="about">
-        <p> Page under construction. </p>
+        <p> Page under construction </p>
     </div>
     <div class="footer"> <i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i> <i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i> <i class="fa fa-flickr fa-2x" aria-hidden="true"></i> </div>
 </body>
